# rust-devops-azure-sample

./: .env.example  .gitignore  Cargo.toml  Dockerfile  MODULE.bazel  README.md  WORKSPACE.old  deployment.bicep  index.json  justfile  manifest.json  subscription.bicep
.github/worflows/: build.yml
.github/workflows/: bazel_build.yml  create_release.yml  deploy-azure.yml  release_draft.yml  release_notes_comments_migration.yml  rust.yml  undeploy-azure.yml
cedar-policies/: BUILD.bazel  run.sh
cedar-policies/projects/: entities.json  policies.cedar  projects.cedarschema
cedar-policies/projects/ALLOW/: anonymous_viewproject_project1.json  developer_view_project.json  projectlead_create_project.json  projectlead_view_project.json
cedar-policies/projects/DENY/: anonymous_viewproject_task1.json
crates/webapp/: BUILD.bazel
crates/webapp/src/: main.rs  services.rs
crates/webapp/src/services/: articles.rs  mod.rs  permission.rs  projects.rs
crates/webapp/src/services/permission/: action.rs  authorizer.rs  mod.rs
modules/: containerApp.bicep
oci/: BUILD.bazel  install_deps.sh
sql-migrations/: 01__initial.sql  02__create_articles.sql  03__create_project_tables.sql  03__delete_project_tables-sql.txt  04__create_admin_user.sql  BUILD.bazel
src/: main.rs  services.rs
