load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_doc")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "webapp",
    srcs = ["src/main.rs", "src/services.rs"],
    deps = [
        "@crates//:actix",
        "@crates//:actix-web",
        "@crates//:actix-web-httpauth",
        "@crates//:anyhow",
        "@crates//:argonautica",
        "@crates//:chrono",
        "@crates//:dotenv",
        "@crates//:hmac",
        "@crates//:jwt",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:sqlx",
        #"@crates//:srcs",
        "@crates//:tokyo",
        "@rules_rust//tools/runfiles",
        #@crates//:rustls"
    ],
    data = ["//sql-migrations:migration_files"],
    # rustc_flags = [
    #     "-C", "target-feature=+crt-static",
    #     "-C", "link-arg=-static",
    # ],
)

build_test(
    name = "gen_rust_project",
    targets = [
        "@rules_rust//tools/rust_analyzer:gen_rust_project",
    ],
)

build_test(
    name = "rust_fmt",
    targets = [
        "@rules_rust//:rustfmt",
    ],
)
